# ustc_lab

./: .gitignore  pic.drawio
web_app_design/Lab3_Chat/: CMakeLists.txt
web_app_design/Lab3_Chat/client/: MainWindow.cpp  MainWindow.h
web_app_design/Lab3_Chat/common/: Protocol.h
web_app_design/Lab3_Chat/received_files/: 模拟卷3.docx
web_app_design/Lab3_Chat/server/: main.cpp
web_app_design/b_chat/client/: MainWindow.cpp  MainWindow.h  main.cpp
web_app_design/b_chat/common/: Protocol.h
web_app_design/b_chat/server/: main.cpp
web_app_design/c_chat/: CMakeLists.txt
web_app_design/c_chat/server/: main.cpp
web_app_design/copy_chat/client/: main.cpp
web_app_design/lab2/: CMakeLists.txt
web_app_design/lab2/client/: client.cpp
web_app_design/lab2/common/: common.cpp  common.h
web_app_design/lab2/server/: server.cpp
